--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   cloud_firestore: ^3.1.7
   firebase_core: ^1.12.0
+  firebase_auth: ^3.3.6
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
