--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.mychatapp">
+ <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
    <application
+
         android:label="mychatapp"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
@@ -24,6 +27,10 @@
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
+ <intent-filter>
+        <action android:name="com.google.firebase.MESSAGING_EVENT" />
+    </intent-filter>
+
         </activity>
         <!-- Don't delete the meta-data below.
              This is used by the Flutter tool to generate GeneratedPluginRegistrant.java -->
@@ -31,4 +38,5 @@
             android:name="flutterEmbedding"
             android:value="2" />
     </application>
+
 </manifest>
