--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,9 @@ dependencies:
   cloud_firestore: ^3.1.7
   firebase_core: ^1.12.0
   firebase_auth: ^3.3.6
+  image_picker: ^0.8.4+8
+  firebase_storage: ^10.2.7
+  firebase_messaging: ^11.2.6
 
 dev_dependencies:
   flutter_test:
