--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   image_picker: ^0.8.4+8
   firebase_storage: ^10.2.7
   firebase_messaging: ^11.2.6
+  mdi: ^4.0.0
 
 dev_dependencies:
   flutter_test:
